--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.feature_extraction.text import CountVectorizer"
    ]
   },
   {
@@ -550,13 +551,13 @@
     "\n",
     "# Separando los datos y las etiquetas para graficar\n",
     "unigram_labels, unigram_counts = zip(*top_unigrams)\n",
-    "bigram_labels, bigram_counts = zip(*top_bigrams)\n",
+    "bigram_keywords, bigram_counts = zip(*top_bigrams)\n",
     "\n",
     "# Graficando los unigramas más frecuentes\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.barh(unigram_labels, unigram_counts, color='skyblue')\n",
-    "plt.xlabel('Frecuencia')\n",
-    "plt.ylabel('Unigramas')\n",
+    "plt.barh(unigram_keywords, unigram_counts, color='skyblue')\n",
+    "plt.xkeyword('Frecuencia')\n",
+    "plt.ykeyword('Unigramas')\n",
     "plt.title('Unigramas más frecuentes')\n",
     "plt.gca().invert_yaxis()  # Invertiendo el eje y para que los más frecuentes estén arriba\n",
     "plt.show()\n",
@@ -565,10 +566,10 @@
     "plt.figure(figsize=(10, 6))\n",
     "\n",
     "# Desempaquetando los pares de bigramas para etiquetas y valores separados\n",
-    "bigram_labels = [f\"{bg[0]} {bg[1]}\" for bg in bigram_labels]  \n",
-    "plt.barh(bigram_labels, bigram_counts, color='salmon')\n",
-    "plt.xlabel('Frecuencia')\n",
-    "plt.ylabel('Bigramas')\n",
+    "bigram_keywords = [f\"{bg[0]} {bg[1]}\" for bg in bigram_keywords]  \n",
+    "plt.barh(bigram_keywords, bigram_counts, color='salmon')\n",
+    "plt.xkeyword('Frecuencia')\n",
+    "plt.ykeyword('Bigramas')\n",
     "plt.title('Bigramas más frecuentes')\n",
     "plt.gca().invert_yaxis()  # Invertiendo el eje y para que los más frecuentes estén arriba\n",
     "plt.show()\n"
@@ -885,10 +886,10 @@
     "\n",
     "# Visualizando la distribución de etiquetas categóricas\n",
     "plt.figure(figsize=(30, 12))\n",
-    "label_counts = train['keyword'].value_counts()\n",
-    "label_counts.plot(kind='bar')\n",
-    "plt.xlabel('Etiqueta')\n",
-    "plt.ylabel('Cantidad')\n",
+    "keyword_counts = train['keyword'].value_counts()\n",
+    "keyword_counts.plot(kind='bar')\n",
+    "plt.xkeyword('Etiqueta')\n",
+    "plt.ykeyword('Cantidad')\n",
     "plt.title('Distribución de etiquetas categóricas')\n",
     "plt.xticks(rotation=90)\n",
     "plt.show()\n",
@@ -899,7 +900,7 @@
     "# Visualizando de la matriz de confusión utilizando seaborn\n",
     "plt.figure(figsize=(30, 12))\n",
     "sns.heatmap(conf_matrix, annot=True, cmap='Blues', fmt='d')\n",
-    "plt.xlabel('Etiqueta Predicha')\n",
+    "plt.xkeyword('Etiqueta Predicha')\n",
     "plt.ylabel('Etiqueta Real')\n",
     "plt.title('Matriz de Confusión')\n",
     "plt.show()"
